<resources>
    <string name="app_name">ShowMeMoreShops</string>
    <string name="title_activity_maps">Xplorer</string>
    <string name="click">Try</string>
    <string name="back">Back</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="input_place">Input place</string>
    <string name="map_id">e8af58fabd2b5482</string>
    <string name="testing_soon">Market</string>
    <string name="edit">Edit</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="product">Product</string>
    <string name="price">Price</string>
    <string name="amount">Amount</string>
    <string name="img">Image</string>
    <string name="delete">Delete</string>
    <string name="name_market">Name Market</string>
    <string name="search_this">Search this</string>
    <string name="sort_by_price">Price</string>
    <string name="sort_by_amount">Amount</string>
    <string name="sort_by_name">Name</string>
    <string name="email">Email</string>
    <string name="input_name">Input Name</string>
    <string name="register">Register</string>
    <string name="input_name_market">Name market</string>
    <string name="Viewer">Viewer</string>
    <string name="to_products">Categories</string>
    <string name="map">Map</string>
    <string name="list">List</string>
    <string name="exit">Exit</string>
    <string name="logout">LogOut</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="User">User</string>
    <string name="add_market">Add market</string>
    <string name="size_your_market">Size your market : </string>
    <string name="wait_a_second_and_go_to_map">If you dont see, wait a second, and go to map</string>
    <string name="image">image</string>
    <string name="satellite">Satellite</string>
    <string name="discount">Discount?</string>
    <string name="products">Products</string>
    <string name="geolocation">Location</string>
    <string name="find_me">Find Me</string>
    <string name="name_category">Category name</string>
    <string name="name">Name</string>
    <string name="please_login">Please LogIn</string>
    <string name="gps_error">"Can`t find your location\nTurn on GPS or Internet</string>
    <string name="verify_email">Please verify email</string>
    <string name="incorrect_pass">Incorrect password</string>
    <string name="incorrect_login">Incorrect pass or email</string>
    <string name="input_email">Input email</string>
    <string name="password_less">Input password more than 5 symbols</string>
    <string name="success_reg">Success register\nVerify Email please</string>
    <string name="switch_map">Please switch on map</string>
    <string name="reached_max">Reached maximum limit markets \nPay for more :)</string>
    <string name="no_internet">We haven`t internet connection</string>
    <string name="save">Save</string>
    <string name="undo">Undo?</string>
    <string name="cancel">Cancel</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="comment">Comment</string>
    <string name="send_on_email">Send on email</string>
    <string name="settings">Settings</string>
    <string name="other">Other</string>
    <string name="dark_theme">Dark theme</string>
    <string name="aboutDev">About Developers</string>
    <string name="dark">Dark theme</string>
    <string name="liked">You liked it</string>
    <string name="warned">You warned it</string>
    <string name="type_comment">Hold for more</string>
    <string name="edit_comment">Edit comment</string>
    <string name="gps_error_wait">Geolocation not found, try to next time</string>
    <string name="edit_this">Edit this</string>
    <string name="fragment">Fragment</string>
    <string name="click_two_to_exit">Click again to exit</string>
    <string name="remove">Remove</string>
    <string name="repeat_password">Repeat password</string>
    <string name="tab" translatable="false">Tab</string>
    <string name="hold_for_more">Hold for more</string>
    <string name="confirm">Confirm</string>
    <string name="empty">Here is empty</string>
    <string name="stores">Stores</string>
    <string name="hold_and_drag">Hold and drag</string>
    <string name="put_marker_on_map">Put marker on map</string>
    <string name="currency">Currency</string>
    <string name="short_name">Short name</string>
    <string name="cant_find_this">We can`t find this location</string>

</resources>
