<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp"
    android:layout_marginTop="7dp"
    android:layout_marginEnd="5dp"
    android:elevation="14dp"
    android:minHeight="70dp"
    app:cardBackgroundColor="@color/cardColor"
    app:cardCornerRadius="12dp">

    <TextView
        android:id="@+id/productName"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/product"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/productPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="280dp"
        android:layout_marginTop="5dp"
        android:text="@string/price"
        android:textColor="@color/white" />


    <TextView
        android:id="@+id/productAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="280dp"
        android:layout_marginTop="30dp"
        android:text="@string/amount"
        android:textColor="@color/white" />


</androidx.cardview.widget.CardView>