<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/header_title"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/main_color"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="16dp">

    <com.google.android.material.card.MaterialCardView
        app:strokeWidth="2dp"
        app:strokeColor="@color/white"
        app:cardCornerRadius="15dp"
        android:id="@+id/image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="15dp"
        app:cardBackgroundColor="@color/main_color"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/image"
        tools:ignore="ImageContrastCheck" >
        <ImageView
            android:backgroundTint="@color/white"
            android:background="@drawable/ic_people"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/name"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_gravity="end"
            android:layout_marginStart="5dp"
            android:id="@+id/satellite"
            android:layout_width="50dp"
            android:layout_height="wrap_content" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/email"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/email"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <com.google.android.material.textview.MaterialTextView
            android:textColor="@color/white"
            android:layout_width="73dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:gravity="end"
            android:text="@string/satellite" />
    </LinearLayout>

</LinearLayout>