<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_black_third"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="@color/white_black"
        android:orientation="vertical">

        <TextView
            android:id="@+id/categoryName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:text="@string/name_category"
            android:textColor="@color/black_white"
            android:textSize="20sp"
            tools:targetApi="o" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/button_green_blue"
                android:text="@string/sort_by_name"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:cornerRadius="10dp"
                tools:ignore="NestedWeights" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/nav_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/button_green_blue"
                android:text="@string/add"
                android:textSize="15sp"
                app:cornerRadius="10dp" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:visibility="gone"
        android:id="@+id/emptyText"
        android:text="@string/empty"
        android:layout_marginTop="250dp"
        android:layout_gravity="center"
        android:textColor="@color/for_text"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/item_product" />
</LinearLayout>




