<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white_black_half"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/white_black"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:textAlignment="center"
            android:background="@color/white_black"
            android:textColor="@color/black_white"
            android:id="@+id/nameMarket"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/testing_soon"
            android:textSize="30sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/edit"
            android:layout_width="0dp"
            android:backgroundTint="@color/button_green_blue"
            android:layout_marginBottom="5dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:text="@string/edit"
            app:cornerRadius="14dp" />

    </LinearLayout>

    <TextView
        android:visibility="gone"
        android:id="@+id/emptyText"
        android:text="@string/empty"
        android:layout_marginTop="250dp"
        android:layout_gravity="center"
        android:textColor="@color/for_text"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rList"
        tools:listitem="@layout/item_category"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp" />


</LinearLayout>