<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardElevation="3dp">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/bg_register"/>
    <LinearLayout
        android:layout_gravity="center"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:textColorHint="@color/white"
            app:hintTextColor="@color/white"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/name">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextInputEditText"
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:textColorHint="@color/white"
            app:hintTextColor="@color/white"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextInputEditText"
                android:id="@+id/email"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:textColorHint="@color/white"
            app:hintTextColor="@color/white"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/password">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextInputEditText"
                android:id="@+id/password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            app:cornerRadius="14dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="#235E58"
            android:text="@string/register"
            android:id="@+id/btn_register"
            android:layout_gravity="center"
            android:minHeight="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </LinearLayout>

</androidx.cardview.widget.CardView>